# oop_lab3

./: CMakeLists.txt  README.md
src/: arr.cpp  arr.h  figure.cpp  figure.h  fugl.cpp  fugl.h  main.cpp  rhombus.cpp  rhombus.h  sugl.cpp  sugl.h
tests/: tests.cpp
